# Pramaana-v2

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
app/: package.json  tsconfig.json  vitest.config.ts
app/public/: app.js  index.html
app/src/: e2e-demo.ts  index.ts  orchestrate.ts  server.ts
app/test/: app.e2e.test.ts
circuits/: gatez.circom  package.json
contracts/: foundry.toml
contracts/src/: GateZVerifier.sol  IGateZVerifier.sol  NullifierRegistry.sol  Registry.sol
contracts/test/: GateZVerifier.t.sol  NullifierRegistry.t.sol  Registry.t.sol  Vm.sol
crates/aadhaar-qr/: Cargo.toml
crates/aadhaar-qr/src/: decode.rs  lib.rs  parse.rs  testgen.rs  tests.rs  verify.rs
crates/aadhaar-qr/testdata/: synthetic_face.jp2
crates/attestation/: Cargo.toml
crates/attestation/src/: dstack.rs  lib.rs  sim.rs  tdx.rs  tests.rs
crates/enrollment-tee/: Cargo.toml
crates/enrollment-tee/src/: http.rs  lib.rs  registry.rs  tests.rs  vault_client.rs
crates/liveness/: Cargo.toml
crates/liveness/src/: capture.rs  jp2.rs  lib.rs  onnx.rs  sim.rs  tests.rs
crates/palc/: Cargo.toml
crates/palc/src/: lib.rs  tests.rs
crates/voprf/: Cargo.toml
crates/voprf-vault/: Cargo.toml
crates/voprf-vault/src/: http.rs  lib.rs  tests.rs
crates/voprf/src/: lib.rs  server.rs  tests.rs
docs/: ARCHITECTURE.md  DECISIONS.md  GLOSSARY.md  PITCH.md  PROGRESS.md  THREAT_MODEL.md
scripts/: setup-toolchain.sh
sdk/: README.md  package.json  tsconfig.json  vitest.config.ts
sdk/src/: attestation.ts  index.ts  tee.ts
sdk/test/: attestation.test.ts  e2e.test.ts
semaphore/: package.json  tsconfig.json  vitest.config.ts
semaphore/src/: identity.ts  index.ts  proof.ts  registry.ts
semaphore/test/: fixtures.ts  identity.test.ts  onchain.test.ts  unlinkability.test.ts
