[package]
name = "aadhaar-qr"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Exposes the synthetic-QR generator (testgen) to other crates' tests.
test-gen = ["dep:rand"]

[dependencies]
flate2 = "1"
num-bigint = "0.4"
rsa = "0.9"
# "oid" gives Sha256 an AssociatedOid impl, required for the prefixed
# (standards-compliant) PKCS#1 v1.5 SigningKey/VerifyingKey constructors.
sha2 = { version = "0.10", features = ["oid"] }
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
rand = { version = "0.8", optional = true }

[dev-dependencies]
rand = "0.8"
