[package]
name = "attestation"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# SIM mode (deterministic mock quotes) is the default; the real TDX path
# (configfs-tsm quote gen + dcap-rs verify) lives behind "tdx". See §6.
default = []
tdx = []

[dependencies]
