[package]
name = "enrollment-tee"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aadhaar-qr = { path = "../aadhaar-qr" }
attestation = { path = "../attestation" }
liveness = { path = "../liveness" }
palc = { path = "../palc" }
voprf = { path = "../voprf" }

hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
thiserror = "2"
ureq = { version = "3", features = ["json"] }
zeroize = "1"

[dev-dependencies]
aadhaar-qr = { path = "../aadhaar-qr", features = ["test-gen"] }
voprf-vault = { path = "../voprf-vault", features = ["http-server"] }
